--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -60,42 +60,59 @@ table {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    align-items: center; }
-    .papa .hero .buttonholder .leftbutton {
-      font-family: "Roboto", sans-serif;
-      border: 1px white solid;
-      height: 40px;
-      width: 100px;
-      font-size: 25px;
+    align-items: center;
+    text-align: center; }
+    .papa .hero .buttonholder {
       display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: black;
-      color: white;
-      margin: 5px; }
-    .papa .hero .buttonholder .leftbutton:hover {
-      cursor: pointer; }
-    .papa .hero .buttonholder .rightbutton {
-      font-family: "Roboto", sans-serif;
-      border: 1px white solid;
-      height: 40px;
-      width: 100px;
-      font-size: 25px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: black;
-      color: white;
-      margin: 5px; }
-    .papa .hero .buttonholder .rightbutton:hover {
-      cursor: pointer; }
+      align-items: center; }
+      .papa .hero .buttonholder .nameinput {
+        height: 40px;
+        font-size: 25px;
+        border: none;
+        transition: all .5s linear 0s; }
+      .papa .hero .buttonholder .nameinputa {
+        height: 40px;
+        font-size: 25px;
+        background-color: red;
+        border: none;
+        transition: all .5s linear 0s; }
+      .papa .hero .buttonholder .leftbutton {
+        font-family: "Roboto", sans-serif;
+        border: 1px white solid;
+        height: 40px;
+        width: 100px;
+        font-size: 25px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: black;
+        color: white;
+        margin: 5px; }
+      .papa .hero .buttonholder .leftbutton:hover {
+        cursor: pointer; }
+      .papa .hero .buttonholder .rightbutton {
+        font-family: "Roboto", sans-serif;
+        border: 1px white solid;
+        height: 40px;
+        width: 100px;
+        font-size: 25px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: black;
+        color: white;
+        margin: 5px; }
+      .papa .hero .buttonholder .rightbutton:hover {
+        cursor: pointer; }
 
 .papam {
   height: 100%;
   width: 100%;
   position: relative;
   background-color: #292E1E;
-  overflow: auto; }
+  overflow: auto;
+  display: flex;
+  justify-content: space-between; }
   .papam .back {
     position: absolute;
     color: white;
@@ -111,13 +128,14 @@ table {
     margin-left: 10px;
     background-color: #fcfcfc;
     width: 60%;
-    min-height: 90%;
+    min-height: 100%;
     color: black;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    border-radius: 2px; }
+    border-radius: 2px;
+    overflow: auto; }
     .papam .questionsholder .qtitle {
       font-family: "Vollkorn SC", serif;
       font-size: 45px;
@@ -145,6 +163,7 @@ table {
       .papam .questionsholder .questionitself .qholder {
         margin-bottom: 10px;
         width: 50%;
+        color: black;
         word-wrap: break-word;
         text-align: center; }
       .papam .questionsholder .questionitself .mnameholder {
@@ -166,3 +185,74 @@ table {
           border: none;
           font-size: 20px;
           border-radius: 3px; }
+  .papam .rightsideholder {
+    width: 37%;
+    height: 400px;
+    margin-top: 45px;
+    margin-right: 10px;
+    background-color: black;
+    border-radius: 2px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    font-family: "Press Start 2P", cursive; }
+    .papam .rightsideholder .hstopholder {
+      color: white;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      width: 80%; }
+      .papam .rightsideholder .hstopholder .hsnameholder {
+        display: flex;
+        flex-direction: column;
+        align-items: center; }
+        .papam .rightsideholder .hstopholder .hsnameholder .hstitle {
+          color: red;
+          margin-bottom: 3px;
+          margin-top: 5px; }
+    .papam .rightsideholder .hslistholder {
+      width: 80%;
+      height: 80%;
+      margin-bottom: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: center; }
+      .papam .rightsideholder .hslistholder .highscore {
+        color: red;
+        font-size: 25px;
+        margin-bottom: 10px; }
+      .papam .rightsideholder .hslistholder .highscorelist {
+        width: 95%;
+        height: 90%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center; }
+        .papam .rightsideholder .hslistholder .highscorelist .hstitles {
+          color: white;
+          width: 100%;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          margin-bottom: 10px; }
+        .papam .rightsideholder .hslistholder .highscorelist .actualhighscore {
+          color: aqua;
+          width: 100%;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          margin-bottom: 3%; }
+          .papam .rightsideholder .hslistholder .highscorelist .actualhighscore .hsword {
+            flex: 1; }
+          .papam .rightsideholder .hslistholder .highscorelist .actualhighscore .hswords {
+            flex: 1;
+            text-align: right; }
+          .papam .rightsideholder .hslistholder .highscorelist .actualhighscore .hsword1 {
+            flex: 1;
+            color: yellow; }
+          .papam .rightsideholder .hslistholder .highscorelist .actualhighscore .hsword1s {
+            flex: 1;
+            color: yellow;
+            text-align: right; }
