--- a/src/styles/_mentor.scss
+++ b/src/styles/_mentor.scss
@@ -22,7 +22,7 @@
         margin-left: 10px;
         background-color: rgb(252, 252, 252);
         width: 60%;
-        min-height: 100%;
+        min-height: 80%;
         color: black;
         display: flex;
         flex-direction: column;
@@ -154,6 +154,7 @@
                     margin-bottom: 3%;
                     .hsword{
                         flex: 1;
+                        overflow: hidden;
                     }
                     .hswords{
                         flex: 1;
@@ -162,6 +163,7 @@
                     .hsword1{
                         flex: 1;
                         color: yellow;
+                        overflow: hidden;
                     }
                     .hsword1s{
                         flex: 1;
