--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -44,6 +44,10 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+.bigboy {
+  height: 100%;
+  width: 100%; }
+
 .papa {
   height: 100vh;
   width: 100%;
@@ -109,14 +113,14 @@ table {
   height: 100%;
   width: 100%;
   position: relative;
-  background-color: #292E1E;
+  background-color: black;
   overflow: auto;
   display: flex;
   justify-content: space-between; }
   .papam .back {
     position: absolute;
     color: white;
-    background-color: #292E1E;
+    background-color: black;
     border: 1px white solid;
     font-family: "Roboto", sans-serif;
     font-size: 20px;
@@ -168,7 +172,7 @@ table {
         text-align: center; }
       .papam .questionsholder .questionitself .mnameholder {
         font-size: 20px;
-        color: #57046a; }
+        color: red; }
       .papam .questionsholder .questionitself .bqholder {
         margin: 10px;
         width: 40%;
@@ -190,7 +194,7 @@ table {
     height: 400px;
     margin-top: 45px;
     margin-right: 10px;
-    background-color: black;
+    background-color: #101010;
     border-radius: 2px;
     display: flex;
     flex-direction: column;
@@ -258,3 +262,72 @@ table {
             flex: 1;
             color: yellow;
             text-align: right; }
+
+.papasf {
+  height: 100%;
+  width: 100%;
+  position: relative;
+  background-color: black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+  .papasf .back {
+    position: absolute;
+    color: white;
+    background-color: black;
+    border: 1px white solid;
+    font-family: "Roboto", sans-serif;
+    font-size: 20px;
+    top: 10px;
+    left: 10px;
+    border-radius: 2px; }
+  .papasf .inputsholder {
+    width: 100%;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+    .papasf .inputsholder .inputtitle {
+      color: white;
+      font-family: "Vollkorn SC", serif;
+      font-size: 40px;
+      margin-bottom: 20px; }
+    .papasf .inputsholder .theinput {
+      font-family: "Roboto", sans-serif;
+      font-size: 35px;
+      margin-bottom: 20px; }
+    .papasf .inputsholder .texttitle {
+      color: white;
+      font-family: "Vollkorn SC", serif;
+      font-size: 35px;
+      margin-bottom: 20px; }
+    .papasf .inputsholder .thetextarea {
+      font-family: "Roboto", sans-serif;
+      font-size: 20px; }
+    .papasf .inputsholder .thebutton {
+      border: 2px white solid;
+      color: white;
+      font-size: 20px;
+      background-color: black;
+      font-family: "Vollkorn SC", serif;
+      margin-top: 20px; }
+
+.papasw {
+  height: 100%;
+  width: 100%;
+  position: relative;
+  background-color: black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+  .papasw .back {
+    position: absolute;
+    color: white;
+    background-color: black;
+    border: 1px white solid;
+    font-family: "Roboto", sans-serif;
+    font-size: 20px;
+    top: 10px;
+    left: 10px;
+    border-radius: 2px; }
