basic app completed

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -73,13 +73,15 @@ table {
         height: 40px;
         font-size: 25px;
         border: none;
-        transition: all .5s linear 0s; }
+        transition: all .5s linear 0s;
+        text-align: center; }
       .papa .hero .buttonholder .nameinputa {
         height: 40px;
         font-size: 25px;
         background-color: red;
         border: none;
-        transition: all .5s linear 0s; }
+        transition: all .5s linear 0s;
+        text-align: center; }
       .papa .hero .buttonholder .leftbutton {
         font-family: "Roboto", sans-serif;
         border: 1px white solid;
@@ -319,7 +321,8 @@ table {
   position: relative;
   background-color: black;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
   align-items: center; }
   .papasw .back {
     position: absolute;
@@ -331,3 +334,29 @@ table {
     top: 10px;
     left: 10px;
     border-radius: 2px; }
+  .papasw .swwords {
+    color: white;
+    font-family: "Vollkorn SC", serif;
+    font-size: 35px;
+    margin-bottom: 5%; }
+  .papasw .swbutton {
+    border: 2px white solid;
+    color: white;
+    font-size: 20px;
+    background-color: black;
+    font-family: "Vollkorn SC", serif;
+    margin-top: 20px; }
+  .papasw .linear-wipe {
+    text-align: center;
+    background: linear-gradient(to right, #FFF 20%, #FF0 40%, #FF0 60%, #FFF 80%);
+    background-size: 200% auto;
+    color: #000;
+    background-clip: text;
+    text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: shine 1s linear infinite; }
+
+@keyframes shine {
+  to {
+    background-position: 200% center; } }
