--- a/src/styles/_starter.scss
+++ b/src/styles/_starter.scss
@@ -24,6 +24,7 @@
                 font-size: 25px;
                 border: none;
                 transition: all .5s linear 0s;
+                text-align: center;
             }
             .nameinputa{
                 height: 40px;
@@ -31,6 +32,7 @@
                 background-color: red;
                 border: none;
                 transition: all .5s linear 0s;
+                text-align: center;
             }
             .leftbutton{
                 font-family: $secondaryfont;
