--- a/src/styles/_student-waiting.scss
+++ b/src/styles/_student-waiting.scss
@@ -4,7 +4,8 @@
     position: relative;
     background-color: black;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
     .back{
         position: absolute;
@@ -16,5 +17,38 @@
         top: 10px;
         left: 10px;
         border-radius: 2px;
+    }
+    .swwords{
+        color: white;
+        font-family: $primaryfont;
+        font-size: 35px;
+        margin-bottom: 5%;
+    }
+    .swbutton{
+        border: 2px white solid;
+        color: white;
+        font-size: 20px;
+        background-color: black;
+        font-family: $primaryfont;
+        margin-top: 20px; 
+    }
+    .linear-wipe {
+        text-align: center;
+        
+        background: linear-gradient(to right, #FFF 20%, #FF0 40%, #FF0 60%, #FFF 80%);
+        background-size: 200% auto;
+        
+        color: #000;
+        background-clip: text;
+        text-fill-color: transparent;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        
+        animation: shine 1s linear infinite;
+        @keyframes shine {
+          to {
+            background-position: 200% center;
+          }
+        }
     }
 }
